# GOIT_WEB_hw8

./: passwors.txt  pyproject.toml  test.js
part_1/: drop_database.py  models.py  search.py  seeds.py
part_2/: consumer_email.py  consumer_sms.py  contacts_model.py  model_contacts.py  producer.py
src/: connection.py  models.py
